[gd_scene load_steps=2 format=3 uid="uid://coq5iuqcqfbbc"]

[ext_resource type="Script" uid="uid://bo4lj0uotwt4q" path="res://scripts/ui/save/LoadMenu.gd" id="1"]

[node name="LoadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Window" type="Panel" parent="Center"]
custom_minimum_size = Vector2(900, 540)
layout_mode = 2

[node name="Root" type="VBoxContainer" parent="Center/Window"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="Center/Window/Root"]
layout_mode = 2

[node name="Title" type="Label" parent="Center/Window/Root/Header"]
layout_mode = 2
text = "Load Game"

[node name="Spacer" type="Control" parent="Center/Window/Root/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ToTitleBtn" type="Button" parent="Center/Window/Root/Header"]
layout_mode = 2
text = "Title"

[node name="CloseBtn" type="Button" parent="Center/Window/Root/Header"]
layout_mode = 2
text = "Close"

[node name="Hint" type="Label" parent="Center/Window/Root"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Center/Window/Root"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
